# ChangeLog for net-print/hplip
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.205 2011/12/18 10:52:55 billie Exp $

*hplip-3.11.12 (18 Dec 2011)

  18 Dec 2011; Daniel Pielmeier <billie@gentoo.org> -hplip-3.11.10-r2.ebuild,
  +hplip-3.11.12.ebuild, +files/hplip-3.11.12-udev-rules.patch:
  Version bump.

*hplip-3.11.10-r2 (08 Dec 2011)

  08 Dec 2011; Daniel Pielmeier <billie@gentoo.org> -hplip-3.11.10-r1.ebuild,
  +hplip-3.11.10-r2.ebuild:
  Install udev rules into /lib/udev/rules.d. This fixes bug #393339. Thanks to
  Jonathan Callen for the report.

  08 Dec 2011; Daniel Pielmeier <billie@gentoo.org>
  -files/hplip-3.11.5-cups-1.5.patch, -hplip-3.11.7.ebuild,
  -files/hplip-3.11.7-udev-attrs.patch:
  Remove old.

  16 Nov 2011; Daniel Pielmeier <billie@gentoo.org> hplip-3.11.10-r1.ebuild:
  Remove hal fdi files. This fixes bug #389645. Thanks to i.Dark_Templar for
  the report.

  06 Nov 2011; Brent Baude <ranger@gentoo.org> hplip-3.11.10.ebuild:
  Marking hplip-3.11.10 ppc for bug 388989

  04 Nov 2011; Tony Vroon <chainsaw@gentoo.org> hplip-3.11.10.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #388989.

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> hplip-3.11.10.ebuild:
  x86 stable wrt bug #388989

  01 Nov 2011; Daniel Pielmeier <billie@gentoo.org> hplip-3.11.10-r1.ebuild:
  Switch to EAPI 4. Remove Copyright files.

*hplip-3.11.10-r1 (01 Nov 2011)

  01 Nov 2011; Daniel Pielmeier <billie@gentoo.org> +hplip-3.11.10-r1.ebuild:
  Revision bump to remove la files, thanks to Agostino Sarubbo in bug #388989.

  24 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org> hplip-3.11.5.ebuild,
  hplip-3.11.7.ebuild, hplip-3.11.10.ebuild:
  Depend on correct slot of pygobject.

*hplip-3.11.10 (15 Oct 2011)

  15 Oct 2011; Daniel Pielmeier <billie@gentoo.org> +hplip-3.11.10.ebuild,