@@ -14,14 +14,14 @@ DIST hplip-3.11.10.tar.gz 21419965 RMD160 d5e7bd065f1fea5f536b4bf47c8962374de955
 DIST hplip-3.11.12.tar.gz 21530771 RMD160 e192446613e13d55bedfd331afd9b08d51071da0 SHA1 4990a7e416b5c75a9cf31604d20e5a0ff2f2f2dd SHA256 dcf05d1261f091a1dba1316a1f4e9034147fecbb1fff3e68179a599eb5ee4a9d
 DIST hplip-3.11.5.tar.gz 21227642 RMD160 8a87f201aac95253d0ac1765e21aa094f11389f8 SHA1 e3604752b7a1ab0f492a1b4d470f8fa75e8959e5 SHA256 611f677fc1a0d2d493d44bfe84e5e5aaac4124627e94885f57bc77db9178536c
 EBUILD hplip-3.11.10.ebuild 7517 RMD160 2f9c8086c7176c8ef826dcecb3ebca74266cdb2d SHA1 af9d666b98dd15a1db1e0c867201590b9ced191d SHA256 124b817b401ea6bd3140eefa2afe14b8e2dd0f438ec529e2734de06e7eb4318e
-EBUILD hplip-3.11.12.ebuild 7632 RMD160 72af7114767f523ea4b053609fb379d3eb8d2e9f SHA1 6dc51d265dcf6d39b6132e85787745f2c7fa23ce SHA256 7e99ff52311f951fb9655db6db008f1f3cc39e28613e5d83677637224cc084d3
+EBUILD hplip-3.11.12.ebuild 7648 RMD160 cac052ea32591a63bb99f90b01cd05d641919b5a SHA1 b79c896d9984e6e6710fdfc9e50cb5f3d713c778 SHA256 2b7b01354f365594d59ce9e92c2d72fc6910d26a539d5484f0b5301d99485ec4
 EBUILD hplip-3.11.5.ebuild 7517 RMD160 4ae37df100c2990de5b4da29684eee5ef677a5f5 SHA1 dc9f869e81014b7778e4c6aadcbaf82dc6434a5e SHA256 b3eaf951652f14975d7ba12fc16e1bd9198db86aee40e0c78624f25df658ce34
-MISC ChangeLog 35395 RMD160 d4c386e7d157b4ef6b2a4b5c1fe3b3ee81f82c16 SHA1 cd074f833df6fa5099250645f956ca0813177692 SHA256 ea9a0dd25503e98950067f975ef9f1f208c6848c8d8c4ffde793748f904f8989
+MISC ChangeLog 35541 RMD160 782a0beff8b14678f818c69b2376c4a3be36cf20 SHA1 ea446613e1e29612e63c8b1c05c3058c043f3215 SHA256 3191d907b5a3851501f7764c63fe4b689494f927e3203db06964aeb7f99147da
 MISC metadata.xml 1806 RMD160 e707e0dfafb5138991bd381897b2cfdc101592e6 SHA1 7b62985602d07602626bc27078eec3744935cb29 SHA256 351d1d208236544a9a693902bcbcf16e32640f9e049ea0b2326dc1f1a13ad8bc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREIAAYFAk7txhkACgkQlcuUeyFa0U1EFgCfXFc9PQRb5ZtwbIEhOk4QWqqj
-HewAoOJE4Uv5taXu7QHetHPrBD1LgrPS
-=582e
+iEYEAREIAAYFAk8N4UoACgkQlcuUeyFa0U1IaQCfT2D3KikrsNBuF5BwxlGr/3o1
+d5kAnjMUNTSeocMjnKFB9ZMZcBDg9/1t
+=1bep
 -----END PGP SIGNATURE-----
