@@ -1,6 +1,9 @@
 # ChangeLog for net-print/hplip
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.205 2011/12/18 10:52:55 billie Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-print/hplip/ChangeLog,v 1.206 2012/01/11 19:21:40 billie Exp $
+
+  11 Jan 2012; Daniel Pielmeier <billie@gentoo.org> hplip-3.11.12.ebuild:
+  Fix bug #397493. Thanks to Hanno Meyer-Thurow (geki) for the report.
 
 *hplip-3.11.12 (18 Dec 2011)
 
